# mai-rentals

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: launch.json
.github/workflows/: fly-deploy.yml
app/: __init__.py  auth.py  billing.py  db.py  pdf.py  routes.py  sheets.py
app/templates/: base.html  bill_detail.html  bill_form.html  billing_kind_form.html  billing_kinds.html  bills.html  categories.html  dashboard.html  forbidden.html  login.html  manage_units.html  occ_form.html  payment_form.html  pdf_picker.html  recurring_bill_form.html  recurring_bills.html  unit_form.html  units.html  user_form.html  users.html
docs/: index.html
docs/css/: style.css
docs/js/: auth.js  billing.js  cascade.js  config.js  main.js  sheets.js  util.js
docs/js/pages/: bill_form.js  bills.js  categories.js  dashboard.js  manage_occupancy.js  manage_units.js  payment_form.js  pdf.js  recurring_form.js  units.js
scripts/: migrate_oauth.py  migrate_sqlite_to_sheets.py
tests/: test_billing.py
