[project]
name = "rental"
version = "0.1.0"
description = "Track tenant utility bill splits"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.7.2",
    "flask>=3.0",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
